<?xml version="1.0"?>
<package format="2">
  <name>lane_extraction</name>
  <version>0.1.0</version>
  <description>The lane_extraction package</description>

  <author email="ssdf@todo.com">SSDF Team</author>
  <maintainer email="ssdf@todo.com">SSDF Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>ssdf_msgs</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>

</package>
